style: custom theme removed due to contrast issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,28 +47,6 @@
     --input: 240 3.7% 15.9%;
     --ring: 240 4.9% 83.9%;
   }
-
-  .dracula {
-    --background: 231 15% 18%;
-    --foreground: 60 30% 96%;
-    --card: 232 14% 31%;
-    --card-foreground: 60 30% 96%;
-    --popover: 232 14% 31%;
-    --popover-foreground: 60 30% 96%;
-    --primary: 326 100% 74%;
-    --primary-foreground: 231 15% 18%;
-    --secondary: 191 97% 77%;
-    --secondary-foreground: 231 15% 18%;
-    --muted: 232 14% 5%;
-    --muted-foreground: 60 10% 80%;
-    --accent: 135 94% 65%;
-    --accent-foreground: 231 15% 18%;
-    --destructive: 0 100% 67%;
-    --destructive-foreground: 60 30% 96%;
-    --border: 232 14% 31%;
-    --input: 232 14% 31%;
-    --ring: 265 89% 78%;
-  }
 }
 
 @layer base {
